@@ -5096,10 +5096,6 @@ void main()
       <td>The input texture's size. Includes the filter margins. The texture size is given in the actual device pixels and incorporates the device pixel ratio.
     </tr>
     <tr>
-      <th><code>uniform vec4 u_meshBox</code>
-      <td>The mesh box position and size in the <a href="#FilterEffectsRegion">filter box</a> coordinate bsystem. For example, if the mesh box is the filter box, the value will be (-0.5, -0.5, 1, 1).
-    </tr>
-    <tr>
       <th><code>uniform vec2 u_tileSize</code>
       <td>The size of the current mesh tile, in the same coordinate space as the vertices.
     </tr>
