@@ -11,7 +11,7 @@
    rel=dc.rights>
   <meta content="Filter Effects 1.0" name=dc.title>
   <meta content=text name=dc.type>
-  <meta content=2013-03-26 name=dc.date>
+  <meta content=2013-04-10 name=dc.date>
   <meta content="Dean Jackson" name=dc.creator>
   <meta content="Erik Dahlström" name=dc.creator>
   <meta content="Dirk Schulze" name=dc.creator>
@@ -34,14 +34,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 26 March 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 10 April 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130326/-->
+     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130410/-->
 
     <dt>Latest version:
 
@@ -11904,14 +11904,6 @@ void main()
           the device pixel ratio.
 
         <tr>
-         <th><code>uniform vec4 u_meshBox</code>
-
-         <td>The mesh box position and size in the <a
-          href="#FilterEffectsRegion">filter box</a> coordinate bsystem. For
-          example, if the mesh box is the filter box, the value will be
-          (-0.5, -0.5, 1, 1).
-
-        <tr>
          <th><code>uniform vec2 u_tileSize</code>
 
          <td>The size of the current mesh tile, in the same coordinate space
@@ -15756,7 +15748,7 @@ interface <b>SVGFEBlendElement</b> : <a
       <h3 class=no-num id=normative-references>Normative references</h3>
       <!--begin-normative--> <!-- Sorted by label -->
       <dl class=bibliography>
-       <dt
+       <dd
         style="display: none"><!-- keeps the doc valid if the DL is empty -->
         <!---->
 
@@ -15773,10 +15765,10 @@ interface <b>SVGFEBlendElement</b> : <a
        <dt id=CSS21>[CSS21]
 
        <dd>Bert Bos; et al. <a
-        href="http://www.w3.org/TR/2011/REC-CSS2-20110607/"><cite>Cascading
+        href="http://www.w3.org/TR/2011/REC-CSS2-20110607"><cite>Cascading
         Style Sheets Level 2 Revision 1 (CSS 2.1) Specification.</cite></a>
         7 June 2011. W3C Recommendation. URL: <a
-        href="http://www.w3.org/TR/2011/REC-CSS2-20110607/">http://www.w3.org/TR/2011/REC-CSS2-20110607/</a>
+        href="http://www.w3.org/TR/2011/REC-CSS2-20110607">http://www.w3.org/TR/2011/REC-CSS2-20110607</a>
        </dd>
        <!---->
 
@@ -15803,10 +15795,10 @@ interface <b>SVGFEBlendElement</b> : <a
        <dt id=CSS3-TRANSITIONS>[CSS3-TRANSITIONS]
 
        <dd>Dean Jackson; et al. <a
-        href="http://www.w3.org/TR/2012/WD-css3-transitions-20120403/"><cite>CSS
-        Transitions.</cite></a> 3 April 2012. W3C Working Draft. (Work in
+        href="http://www.w3.org/TR/2013/WD-css3-transitions-20130212/"><cite>CSS
+        Transitions.</cite></a> 12 February 2013. W3C Working Draft. (Work in
         progress.) URL: <a
-        href="http://www.w3.org/TR/2012/WD-css3-transitions-20120403/">http://www.w3.org/TR/2012/WD-css3-transitions-20120403/</a>
+        href="http://www.w3.org/TR/2013/WD-css3-transitions-20130212/">http://www.w3.org/TR/2013/WD-css3-transitions-20130212/</a>
        </dd>
        <!---->
 
@@ -15912,7 +15904,7 @@ interface <b>SVGFEBlendElement</b> : <a
       <h3 class=no-num id=other-references>Other references</h3>
       <!--begin-informative--> <!-- Sorted by label -->
       <dl class=bibliography>
-       <dt
+       <dd
         style="display: none"><!-- keeps the doc valid if the DL is empty -->
         <!---->
       </dl>
