@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-04-10  Dirk Schulze  <dschulze@adobe.com>
+- Remove u_meshBox from spec. With the removal of <box> argument for
+shaders not necessary anymore.
+
 2013-03-26  Dirk Schulze  <dschulze@adobe.com>
 - Clarify relation of 'enable-background' and 'isolation' properties.
 
